--- a/category/games/2026/02/20260208-130000-vector-tumble-tower-collapse/pyproject.toml
+++ b/category/games/2026/02/20260208-130000-vector-tumble-tower-collapse/pyproject.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 description = "Strategic precision physics puzzle inspired by Jenga"
 requires-python = ">=3.10"
 dependencies = [
-    "pygame",
+    "pygame-ce>=2.5.0",
 ]
 
 [project.scripts]
